--- a/_posts/2018-05-25-welcome.md
+++ b/_posts/2018-05-25-welcome.md
@@ -5,6 +5,8 @@ title: A New Blog
 
 # {{ page.title }}
 
-<p class="meta">Purpose:</p>
+<p class="meta">Reason for this blog:</p>
 
 Mostly going to keep it updated with some of my notes etc.,
+
+> Comment
